# Chuvsu_4Kurs_SystemProgramming

./: README.md
SystemProgramming/: CMakeLists.txt  Lab5Program  main.cpp
SystemProgramming/Lab1/: Lab1.cpp  cpC_files.h
SystemProgramming/Lab1/report/: 1 - Копирование файлов в Unix системах.md
SystemProgramming/Lab1/resources/: 100K_file  10K_file  1M_file_copy
SystemProgramming/Lab2/: console_utils.cpp  console_utils.h
SystemProgramming/Lab2/report/: 2 - Стандартные устройства и консольный ввод и вывод.md
SystemProgramming/Lab3/: error_utils.cpp  error_utils.h
SystemProgramming/Lab3/report/: 3 - Обработка ошибок.md
SystemProgramming/Lab3/resources/: test4.txt
SystemProgramming/Lab4/: write_utils.cpp  write_utils.h
SystemProgramming/Lab4/report/: 4 - Копирование файлов на стандартное устройство вывода.md
SystemProgramming/Lab4/resources/: file1.txt  file2.txt
SystemProgramming/Lab5/: ascii_conver_utils.cpp  ascii_conver_utils.h
SystemProgramming/Lab5/report/: 5 - Преобразование ASCII в UNICODE.md
SystemProgramming/Lab5/resources/: file1.txt  file2.txt
SystemProgramming/Lab6/: file_systems_utils.cpp  file_systems_utils.h
SystemProgramming/Lab6/report/: 6 - Управление файла и каталогами.md
SystemProgramming/Lab7/: text_utils.cpp  text_utils.h
SystemProgramming/Lab7/report/: 7 - Позиционирование в файле.md
SystemProgramming/Lab7/resources/: text.txt
